Closed Bug 490916 Opened 16 years ago Closed 15 years ago

[HTML5] Meta charset sniffing fails with newlines in the attribute value

Categories

(Core :: DOM: HTML Parser, defect, P3)

Other Branch
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: hsivonen, Assigned: hsivonen)

References

()

Details

Attachments

(1 file, 1 obsolete file)

<meta charset=" ISO-8859-9 "> Should be ISO-8859-9 but isn't.
Priority: -- → P3
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Attached patch Trim charset names before use (obsolete) — Splinter Review
Attachment #494360 - Flags: review?(jonas)
Testing IE shows that the trimming indeed belongs in the HTML parser--not in the charset alias service--because IE doesn't trim spaced from CSS @charset.
Comment on attachment 494360 [details] [diff] [review] Trim charset names before use, with test hg added this time Nominating for approval. This is a very simple and low-risk spec correctness fix that implements behavior pioneered by IE.
Attachment #494360 - Flags: approval2.0?
Attachment #494360 - Flags: approval2.0? → approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: