Bug 490916 - Trim space characters from encoding names in the HTML5 parser. r=jonas, a=jst.